--- a/packages/wallet-desktop/res/index.html
+++ b/packages/wallet-desktop/res/index.html
@@ -21,6 +21,7 @@
     <script src="../../node_modules/react/umd/react.development.js"></script>
     <script src="../../node_modules/react-dom/umd/react-dom.development.js"></script>
     <script src="../../node_modules/react-router-dom/umd/react-router-dom.js"></script>
+    <script src="../../node_modules/ethers/dist/ethers.umd.min.js"></script>
     <script type="module" src="../renderer.js"></script>
   </body>
 </html>
