--- a/packages/wallet-protocol-utils/test/index.html
+++ b/packages/wallet-protocol-utils/test/index.html
@@ -42,6 +42,7 @@
     <div class='box'>
         <label>Session <span id='session-state'></span></label>
         <button id='protocol-button'>Start protocol</button>
+        <button id='session-button'>Session to clipboard</button>
         <button id='remove-button'>Remove session</button>
     </div>
     <div class='box'>
