--- a/packages/wallet-desktop/res/pairing/index.html
+++ b/packages/wallet-desktop/res/pairing/index.html
@@ -9,7 +9,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://cdn.jsdelivr.net/npm/node-forge@0.7.0/dist/forge.min.js"></script>
     <script src="@i3m/wallet-protocol/dist/bundles/umd.js"></script>
-    <script src="@i3m/wallet-protocol-utils/dist/wallet-protocol-utils.umd.js"></script>
+    <script src="@i3m/wallet-protocol-utils/dist/bundles/umd.js"></script>
     <script src="./main.js"></script>
     <style>
         body {
