--- a/packages/wallet-desktop/res/index.html
+++ b/packages/wallet-desktop/res/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Simple Wallet</title>
+    <title>i3-MARKET Wallet</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
