--- a/packages/wallet-desktop/res/pairing/index.html
+++ b/packages/wallet-desktop/res/pairing/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>
-        Forge
+        Wallet Pairing Tool
     </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://cdn.jsdelivr.net/npm/node-forge@0.7.0/dist/forge.min.js"></script>
